<resources>
    <string name="app_name">Arboretum</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="switchRadius">Radius</string>
    <string name="useGPSToggle">GPS</string>
    <string name="buttonQuery">Query</string>
    <string name="switchOnlineOffline">Online</string>
    <string name="switchFollow">Follow</string>
    <string name="hideButton">Hide Controls</string>
    <string name="clearButton">Clear Map</string>
    <string name="generaSpinner">Select genera...</string>
    <string name="switchHeat">Heat Map</string>
    <string name="switchGPS">GPS</string>
    <string name="mapSettings">Map Settings...</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to trees -->
    <string name="family">Family</string>
    <string name="familiar_name">Familiar Name</string>
    <string name="genus">Genus</string>
    <string name="species">Species</string>
    <string name="rank">Rank</string>
    <string name="type">Type</string>
    <string name="hybrid_cross">Hybrid Cross</string>
    <string name="cultivar">Cultivar</string>
    <string name="name_status">Name Status</string>
    <string name="authority">Authority</string>
    <string name="date_introduced">Date Introduced</string>
    <string name="access_number">Access Number</string>
    <string name="received_from">Received From</string>
    <string name="date_received">Date Received</string>
    <string name="received_through">Received Through</string>
    <string name="amount_received">Amount Received</string>
    <string name="name_received">Name Received</string>
    <string name="common_name">Common Name</string>
    <string name="nom_commun">Nom Commun</string>
    <string name="nursery">Nursery</string>
    <string name="location">Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="donor">Donor</string>
    <string name="origins">Origins</string>
    <string name="id_by_date">ID By Date</string>
    <string name="photo1">Photo1</string>
    <string name="photo2">Photo2</string>
    <string name="notes">Notes</string>
    <string name="memo">Memo</string>
    <string name="hint_family">Ex: SAPINDACEAE</string>
    <string name="hint_familiar_name">Ex: Yellow Horn</string>
    <string name="hint_genus">Ex: Xanthoceras</string>
    <string name="hint_species">Ex: Sorbifolium</string>
    <string name="hint_type">Ex: Warei</string>
    <string name="hint_hybrid_cross">Ex: Q.MACROCARPA x Q.GAMBELII</string>
    <string name="hint_cultivar">Ex: Susan</string>
    <string name="hint_name_status">Ex: false</string>
    <string name="hint_authority">Ex: Zabel</string>
    <string name="hint_accessno">Ex: 9290012001</string>
    <string name="hint_received_from">Ex: SPAETH NURSERY, GERMANY</string>
    <string name="hint_date_received">Ex: 1934</string>
    <string name="hint_received_through">Ex: Seed</string>
    <string name="hint_amount_received">Ex: 72</string>
    <string name="hint_date_intro">Ex: 1880</string>
    <string name="hint_name_received">Ex: SALIX SP.</string>
    <string name="hint_common_name">Ex: Lilac</string>
    <string name="hint_nom_commun">Ex: Lilas</string>
    <string name="hint_location">Ex: 054-123-435</string>
    <string name="hint_donor">Ex: true</string>
    <string name="hint_source_acc">Ex: NA 35857</string>
    <string name="hint_revised">Ex: 01-01-31</string>
    <string name="revised_date">Revised Date</string>
    <string name="hint_origins">Ex: Japan</string>
    <string name="hint_herbspec">Ex: Y</string>
    <string-array name="genera">
        <item>Acer</item>
        <item>Actinidia</item>
        <item>Aesculus</item>
        <item>Alnus</item>
        <item>Amelanchier</item>
        <item>Amorpha</item>
        <item>Aralia</item>
        <item>Aronia</item>
        <item>Betula</item>
        <item>Buddleia</item>
        <item>Calycanthus</item>
        <item>Carpinus</item>
        <item>Carya</item>
        <item>Catalpa</item>
        <item>Celastrus</item>
        <item>Celtis</item>
        <item>Cephalanthus</item>
        <item>Cercidiphyllum</item>
        <item>Chamaecyparis</item>
        <item>Chionanthus</item>
        <item>Colutea</item>
        <item>Cornus</item>
        <item>Corylus</item>
        <item>Cotoneaster</item>
        <item>Crataegus</item>
        <item>Cytisus</item>
        <item>Daphne</item>
        <item>Deutzia</item>
        <item>Diervilla</item>
        <item>Dirca</item>
        <item>Eleutherococcus</item>
        <item>Euonymus</item>
        <item>Fagus</item>
        <item>Forsythia</item>
        <item>Fraxinus</item>
        <item>Ginkgo</item>
        <item>Gleditsia</item>
        <item>Gymnocladus</item>
        <item>Hibiscus</item>
        <item>Hydrangea</item>
        <item>Juniperus</item>
        <item>Kolkwitzia</item>
        <item>Laburnum</item>
        <item>Larix</item>
        <item>Lennea</item>
        <item>Lespedeza</item>
        <item>Lonicera</item>
        <item>Maackia</item>
        <item>Magnolia</item>
        <item>Malus</item>
        <item>Metasequoia</item>
        <item>Morus</item>
        <item>Myrica</item>
        <item>Ostrya</item>
        <item>Phellodendron</item>
        <item>Philadelphus</item>
        <item>Physocarpus</item>
        <item>Picea</item>
        <item>Pinus</item>
        <item>Populus</item>
        <item>Pseudotsuga</item>
        <item>Ptelea</item>
        <item>Pterostyrax</item>
        <item>Quercus</item>
        <item>Rhamnus</item>
        <item>Rhododendron</item>
        <item>Ribes</item>
        <item>Robinia</item>
        <item>Rubus</item>
        <item>Salix</item>
        <item>Sambucus</item>
        <item>Shepherdia</item>
        <item>Sorbaria</item>
        <item>Sorbus</item>
        <item>Staphylea</item>
        <item>Stephanandra</item>
        <item>Syringa</item>
        <item>Taxodium</item>
        <item>Thuja</item>
        <item>Tilia</item>
        <item>Tsuga</item>
        <item>Ulmus</item>
        <item>Vaccinium</item>
        <item>Viburnum</item>
        <item>Other</item>
    </string-array>
</resources>
